--- a/shop.html
+++ b/shop.html
@@ -74,12 +74,24 @@
         <h2 class="title"><span>Purses</span> <span class="muted small">Depth: 4"</span></h2>
         <p class="muted small">Included: 1 color; soft or firm leather; tote handles or 3/4&quot; crossbody strap; hardware.</p>
 
-        <fieldset>
-          <legend>Size (base price)</legend>
-          <label><input type="radio" name="purse-size" value="Small" data-base="44" checked> Small — $44</label>
-          <label><input type="radio" name="purse-size" value="Medium" data-base="67"> Medium — $67</label>
-          <label><input type="radio" name="purse-size" value="Large" data-base="90"> Large — $90</label>
-        </fieldset>
+       <fieldset>
+  <legend>Size (base price)</legend>
+  <label>
+    <input type="radio" name="purse-size" value="Small" data-base="44" checked>
+    Small — $44 (≈ 8" x 6")  
+    <span class="small muted">Perfect for phone, wallet, keys, and one emergency snack.</span>
+  </label>
+  <label>
+    <input type="radio" name="purse-size" value="Medium" data-base="67">
+    Medium — $67 (≈ 10" x 8")  
+    <span class="small muted">Room for your essentials and the random stuff you swear you’ll clean out later.</span>
+  </label>
+  <label>
+    <input type="radio" name="purse-size" value="Large" data-base="90">
+    Large — $90 (≈ 12" x 10")  
+    <span class="small muted">Because you like to carry everything — except regret.</span>
+  </label>
+</fieldset>
 
         <fieldset>
           <legend>Customizations</legend>
