--- a/checkout.html
+++ b/checkout.html
@@ -71,12 +71,14 @@
   </header>
 
   <main class="container">
-    <section class="card">
-      <div class="pad">
-        <h1 class="title"><span>Checkout</span></h1>
-        <p class="small muted">Review your order below. You can update quantities or remove items before paying.</p>
-      </div>
-    </section>
+   <p class="small muted">
+  Review your order below. You can update quantities or remove items before paying.
+</p>
+<p class="small muted" style="font-weight:600; margin-top:6px;">
+  Your order will be clamped under a piece of tooling leather, so it doesn’t wander off.<br>
+  I’ll take a sip of coffee, brush off the leather shavings, and give your idea a look.<br>
+  If you don’t hear from me soon, assume I’m elbow-deep in dye — not ignoring you.
+</p>
 
     <!-- Cart items -->
     <section class="card" id="cartCard">
