--- a/shop.html
+++ b/shop.html
@@ -78,17 +78,17 @@
   <legend>Size (base price)</legend>
   <label>
     <input type="radio" name="purse-size" value="Small" data-base="44" checked>
-    Small — $44 (≈ 8" x 6")  
+    Small — $44 (≈ 8" x 6" x 4")  
     <span class="small muted">Perfect for phone, wallet, keys, and one emergency snack.</span>
   </label>
   <label>
     <input type="radio" name="purse-size" value="Medium" data-base="67">
-    Medium — $67 (≈ 10" x 8")  
+    Medium — $67 (≈ 10" x 8" x 4")  
     <span class="small muted">Room for your essentials and the random stuff you swear you’ll clean out later.</span>
   </label>
   <label>
     <input type="radio" name="purse-size" value="Large" data-base="90">
-    Large — $90 (≈ 12" x 10")  
+    Large — $90 (≈ 12" x 10" x 4")  
     <span class="small muted">Because you like to carry everything — except regret.</span>
   </label>
 </fieldset>
