--- a/shop.html
+++ b/shop.html
@@ -26,8 +26,8 @@
     .card{background:rgba(0,0,0,.55);border:1px solid var(--muted);border-radius:14px;overflow:hidden;margin-bottom:18px}
     .card .pad{padding:18px}
     .title{display:flex;align-items:center;justify-content:space-between;gap:12px;margin:0 0 8px}
-    .imgwrap{width:100%;max-height:210px;overflow:hidden;border-bottom:1px solid var(--muted)}
-    .imgwrap img{display:block;width:100%;height:100%;object-fit:cover}
+    .imgwrap{width:100%;height:210px;border-bottom:1px solid var(--muted);display:flex;align-items:center;justify-content:center}
+    .imgwrap img{display:block;width:100%;height:100%;object-fit:contain;object-position:center}
 
     fieldset{border:1px solid var(--muted);border-radius:12px;margin:12px 0;padding:12px}
     legend{opacity:.9;padding:0 6px}
