--- a/index.html
+++ b/index.html
@@ -236,24 +236,16 @@
     <img id="zoomImg" alt="">
   </div>
 
-  <!-- Donations (both PayPal and Cash App) -->
   <footer>
     <section class="donos">
       <h3>Support 3Leathers — No machines. Made by hand.</h3>
-      <div class="donation-buttons">
-        <a href="https://www.paypal.me/WalterLewis675/5" target="_blank" class="donate-btn">$5</a>
-        <a href="https://www.paypal.me/WalterLewis675/10" target="_blank" class="donate-btn">$10</a>
-        <a href="https://www.paypal.me/WalterLewis675/20" target="_blank" class="donate-btn">$20</a>
-        <a href="https://www.paypal.me/WalterLewis675/50" target="_blank" class="donate-btn">$50</a>
-        <a href="https://www.paypal.me/WalterLewis675" target="_blank" class="donate-btn">Custom</a>
-      </div>
-      <div class="donation-buttons" style="margin-top:10px">
-        <a href="https://cash.app/$UncleButch3/5" target="_blank" class="donate-btn ca">$5</a>
-        <a href="https://cash.app/$UncleButch3/10" target="_blank" class="donate-btn ca">$10</a>
-        <a href="https://cash.app/$UncleButch3/20" target="_blank" class="donate-btn ca">$20</a>
-        <a href="https://cash.app/$UncleButch3/50" target="_blank" class="donate-btn ca">$50</a>
-        <a href="https://cash.app/$UncleButch3" target="_blank" class="donate-btn ca">Custom</a>
-      </div>
+     <div class="donation-block">
+    <img src="images/payment-icons.jpeg" alt="Accepted payment methods" class="payment-icons" style="max-width:220px; display:block; margin: 10px auto;">
+
+    <p>You can support the craft directly through a secure Square checkout. Every bit helps keep the tools sharp and the leather behaving.</p>
+
+    <a href="https://square.link/u/YoC1vvwr" class="donate-btn" style="margin-top:10px;">Support the Craft</a>
+</div>
     </section>
     <div class="fine">
       <small>&copy; 3Leathers — Handmade by Walter Lewis III</small>
