--- a/custom.html
+++ b/custom.html
@@ -58,6 +58,10 @@
     <section class="card">
       <h1>Custom Creations</h1>
       <p class="lead">Your idea can be anything—if it’s not in the Shop, it lives here. Dream it up, I’ll wrangle the leather.</p>
+      <p><strong>Custom Project Deposits:</strong><br>
+Once we finalize your design together, I’ll send you a secure Square invoice for a <strong>30% non-refundable deposit</strong>.
+Square also gives you the option to save your card on file. When your item is finished, I’ll send the final invoice
+(or charge the saved card after confirming with you) before shipping.</p>
     </section>
 
     <section class="card examples">
