--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>3Leathers — Handmade Leather by Walter Lewis III</title>
   <meta name="description" content="No machines. Made by hand. Wallets, purses, holsters and custom leatherwork by 3Leathers." />
+
+  <!-- Open Graph (social previews) -->
+  <meta property="og:title" content="3Leathers – Custom Leather by Walter Lewis III">
+  <meta property="og:description" content="Handcrafted wallets, purses, holsters, and custom leather projects made one at a time in West Virginia. No machines, no shortcuts.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://wwl3leathers.github.io/">
+  <meta property="og:image" content="https://wwl3leathers.github.io/images/workshop-background.jpg">
+
+  <!-- Twitter card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="3Leathers – Custom Leather by Walter Lewis III">
+  <meta name="twitter:description" content="Handcrafted wallets, purses, holsters, and custom leather projects made one at a time in West Virginia.">
+  <meta name="twitter:image" content="https://wwl3leathers.github.io/images/workshop-background.jpg">
+
+  <!-- Structured data for Google (brand + images) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "3Leathers – Custom Leather by Walter Lewis III",
+    "url": "https://wwl3leathers.github.io/",
+    "logo": "https://wwl3leathers.github.io/images/Logo-min.jpg",
+    "image": [
+      "https://wwl3leathers.github.io/images/workshop-background.jpg",
+      "https://wwl3leathers.github.io/images/Wallet.jpeg",
+      "https://wwl3leathers.github.io/images/Holster-BF-min.jpeg",
+      "https://wwl3leathers.github.io/images/Purse04-min.jpg",
+      "https://wwl3leathers.github.io/images/Scroll-min.jpeg"
+    ]
+  }
+  </script>
+
   <style>
     :root{
       --bg:#0b0b0b; --ink:#f8f5e3; --accent:#d6b14a; --muted:rgba(255,255,255,.08);
@@ -96,22 +128,23 @@
     .donate-btn.ca{background-color:#3ddc84}
     .fine{color:#cfc8a8;text-align:center;padding:14px 16px}
     .contact-info {
-  margin-left: auto;
-  font-size: 0.9rem;
-  color: var(--ink);
-  white-space: nowrap;
-}
+      margin-left: auto;
+      font-size: 0.9rem;
+      color: var(--ink);
+      white-space: nowrap;
+    }
 
-@media (max-width: 700px) {
-  .contact-info {
-    display: block;
-    margin-left: 0;
-    margin-top: 4px;
-    text-align: right;
-  }
-}
+    @media (max-width: 700px) {
+      .contact-info {
+        display: block;
+        margin-left: 0;
+        margin-top: 4px;
+        text-align: right;
+      }
+    }
   </style>
 </head>
+
 <body>
   <header>
     <div class="wrap row">
