--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>3Leathers — Handmade Leather by Walter Lewis III</title>
+  <link rel="icon" type="image/jpeg" href="images/Logo-min.jpg" />
+<link rel="apple-touch-icon" href="images/Logo-min.jpg" />
+<link rel="shortcut icon" href="images/Logo-min.jpg" />
+
   <meta name="description" content="No machines. Made by hand. Wallets, purses, holsters and custom leatherwork by 3Leathers." />
 
   <!-- Open Graph (social previews) -->
