--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         margin-left: 0;
         margin-top: 4px;
         text-align: right;
+        white-space: normal;
       }
     }
   </style>
