--- a/shop.html
+++ b/shop.html
@@ -19,7 +19,9 @@
     .brand img{height:40px;border-radius:4px}
     nav a{margin-left:10px}
     .contact-info{margin-left:auto;font-size:.9rem;color:var(--ink);white-space:nowrap}
-    @media (max-width:700px){ .contact-info{display:block;margin-left:0;margin-top:4px;text-align:right} }
+    @media (max-width:700px){ .contact-info{display:block;margin-left:0;margin-top:4px;text-align:right;white-space: normal;
+     }
+  }
 
     /* Page layout */
     .container{max-width:960px;margin:0 auto;padding:clamp(16px,3vw,32px)}
